Adicionando favicon, e link de um projeto

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Raleway:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
     <link rel="stylesheet" type='text/css' href="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/devicon.min.css" />
+    <link rel="shortcut icon" href="./src/img/favicon-16x16.png" type="image/x-icon">
 
     <script src="https://lit.fontawesome.com/b3f89f3272.js" crossorigin="anonymous"
     ></script>
@@ -43,7 +44,7 @@
             <h2 class="section-title">Sobre mim</h2>
 
             <div class="about-me-content">
-                <img src="./src/img/perfil.png" alt="Caio Filardis">
+                <img src="./src/img/perfil.jpg" alt="Caio Filardis">
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim quas aliquam eaque doloremque labore hic distinctio voluptatem nobis numquam quae illum explicabo accusantium sit id blanditiis atque doloribus, quisquam laborum quaerat dolorum expedita ipsum facere nisi. Dolores sunt, harum obcaecati aperiam rerum, vero dicta laborum optio ad ducimus quae consequatur?</p>
             </div>
         </div>
@@ -69,13 +70,13 @@
 
                 <div class="skill-item">
                     <img src="./src/img/CSS ICON.png" alt="CSS" />
-                    <span>HTML</span>
+                    <span>CSS</span>
                     <p>Linguagem responsável por definir o estilo dos sites. Possuo amplo domínio.</p>
                 </div>
 
                 <div class="skill-item">
                     <img src="./src/img/JS ICON.png" alt="JavaScript" />
-                    <span>HTML</span>
+                    <span>JavaScript</span>
                     <p>Linguagem responsável por definir o esqueleto de sites. Possuo amplo domínio.</p>
                 </div>
 
@@ -96,11 +97,11 @@
             <div class="projects-content">
                 <div class="project-item">
                     <!-- IMAGEM -->
-                   <div class="project-item-image project-item-1"></div>
+                   <a href="https://caiofilardis.github.io/Cardapio-Online/" title="Link para projeto" target="_blank"><div class="project-item-image project-item-1"></div></a>
                     
                     <!-- TEXTO -->
                      <div class="project-text">
-                        <h3>Cardápio Online</h3>
+                        <h3><a href="https://caiofilardis.github.io/Cardapio-Online/" target="_blank">Cardápio Online</a></h3>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat ratione doloremque distinctio sint aliquam. Eaque explicabo voluptatum aspernatur, est sint cupiditate. Veniam, necessitatibus numquam debitis ex quidem distinctio ipsum laudantium!
                         </p>
                      </div>
