Tornando meu portfólio responsivo

--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
     <title>Portfólio</title>
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
-
     <link rel="stylesheet" href="./src/css/reset.css">
     <link rel="stylesheet" href="./src/css/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -14,6 +13,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Raleway:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
     <link rel="stylesheet" type='text/css' href="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/devicon.min.css" />
     <link rel="shortcut icon" href="./src/img/favicon-16x16.png" type="image/x-icon">
+    <link rel="stylesheet" href="./src/css/mobile.css">
 
     <script src="https://lit.fontawesome.com/b3f89f3272.js" crossorigin="anonymous"
     ></script>
@@ -56,8 +56,8 @@
             <h2 class="section-title">Habilidades</h2>
 
             <div class="skills-content">
-               <div class="skill-item">
-                    <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/java/java-original.svg" alt="Java" style="width: 100px; height: 100px; background-color: #bba7a5; border: 2px solid white; border-radius: 15px; "/>
+               <div class="skill-item java">
+                    <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/java/java-original.svg" alt="Java"/>
                     <span>Java</span>
                     <p>Linguagem responsável por definir o estilo dos sites. Possuo amplo domínio</p>
                </div>
@@ -80,8 +80,8 @@
                     <p>Linguagem responsável por definir o esqueleto de sites. Possuo amplo domínio.</p>
                 </div>
 
-                <div class="skill-item">
-                    <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/bootstrap/bootstrap-original.svg" alt="BootStrap" style="width: 100px; height: 100px;"/>
+                <div class="skill-item bootstrap">
+                    <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/bootstrap/bootstrap-original.svg" alt="BootStrap"/>
                     <span>BootStrap</span>
                     <p>Linguagem responsável por definir o esqueleto de sites. Possuo amplo domínio.</p>
                 </div>
